Adding constants class with several values to clean thing up a bit Moving the LoginRequest and LoginResponse to a new dto package Adding a test framework to test the code inside the activities Updating fragment login to be able to enter username and password Updating strings xml Updating base fragment to include a method to call the rest services

--- a/splitemapp-android/res/layout/fragment_login.xml
+++ b/splitemapp-android/res/layout/fragment_login.xml
@@ -4,33 +4,25 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <Button
-        android:id="@+id/add_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="CALL LOGIN" />
-
-    
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="User Name" />
-    
-    <TextView
+    <EditText
         android:id="@+id/user_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="" />
+        android:inputType="textEmailAddress" 
+        android:text="@string/user_name" />
 
-	<TextView
+    <EditText
+        android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Session Token" />
-    
-    <TextView
-        android:id="@+id/session_token"
-        android:layout_width="match_parent"
+        android:inputType="textPassword" 
+        android:text="@string/password" />
+
+    <Button
+        android:id="@+id/login_button"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="" />
+        android:layout_gravity="center"
+        android:text="@string/login" />
 
 </LinearLayout>
