Minor update to the login fragment Cleaning up the login request and response objects Added show toast method to the base fragment object Updated login fragment to show a toast based on the login result

--- a/splitemapp-android/res/layout/fragment_login.xml
+++ b/splitemapp-android/res/layout/fragment_login.xml
@@ -8,6 +8,7 @@
         android:id="@+id/user_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:inputType="textEmailAddress" 
         android:text="@string/user_name" />
 
@@ -15,6 +16,7 @@
         android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:inputType="textPassword" 
         android:text="@string/password" />
 
