--- a/splitemapp-android/res/layout/fragment_login.xml
+++ b/splitemapp-android/res/layout/fragment_login.xml
@@ -1,30 +1,75 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/ActivityTheme"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.5" />
 
     <EditText
         android:id="@+id/user_name"
+        style="@style/LoginEditText"
+        android:layout_weight="0.1"
+        android:hint="@string/user_name"
+        android:inputType="textEmailAddress" />
+
+    <LinearLayout
+        style="@style/ActivityTheme"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:inputType="textEmailAddress" 
-        android:text="@string/user_name" />
+        android:orientation="horizontal">
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0.5dp"
+            android:layout_weight="0.05"
+            android:background="@color/white" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0.5dp"
+            android:layout_weight="0.95"
+            android:background="@color/text" />
+    </LinearLayout>
 
     <EditText
         android:id="@+id/password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:inputType="textPassword" 
-        android:text="@string/password" />
+        style="@style/LoginEditText"
+        android:layout_weight="0.1"
+        android:hint="@string/password"
+        android:inputType="textPassword" />
 
     <Button
         android:id="@+id/login_button"
-        android:layout_width="wrap_content"
+        style="@style/LoginButton"
+        android:layout_weight="0.1"
+        android:text="@string/log_in" />
+
+    <LinearLayout
+        style="@style/ActivityTheme"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="@string/login" />
+        android:layout_weight="0.2"
+        android:gravity="center"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:text="@string/sign_up_question"
+            android:textColor="@color/text" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:text="@string/sign_up_link"
+            android:padding="10dp"
+            android:textColor="@color/green" />
+    </LinearLayout>
 
 </LinearLayout>
