--- a/splitemapp-android/res/values/styles.xml
+++ b/splitemapp-android/res/values/styles.xml
@@ -4,7 +4,7 @@
         Base application theme, dependent on API level. This theme is replaced
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
-    <style name="AppBaseTheme" parent="Theme.AppCompat.Light">
+    <style name="AppBaseTheme" parent="Theme.AppCompat">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
@@ -17,14 +17,14 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
     
-    <style name="ActivityTheme" parent="AppTheme">
+    <style name="ActivityTheme" parent="Theme.AppCompat">
         <item name="android:background">@color/background</item>
         <item name="android:adjustViewBounds">true</item>
         <item name="android:singleLine">true</item>
         <item name="android:maxLines">1</item>
     </style>
     
-    <style name="LoginEditText" parent="AppTheme">
+    <style name="LoginEditText" parent="Theme.AppCompat">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">0dp</item>
         <item name="android:layout_gravity">center</item>
@@ -35,7 +35,7 @@
         <item name="android:paddingLeft">50dp</item>
     </style>
     
-    <style name="LoginButton" parent="AppTheme">
+    <style name="LoginButton" parent="Theme.AppCompat">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">0dp</item>
         <item name="android:layout_gravity">center</item>
