Adding black color Moving sync internal class to BaseFragment to reuse it wherever needed Updating all fragments to implement new required getLogginTag method Fixing home fragment to match the design Fixing list item project to use a compound image to the left of the text instead of a separate image

--- a/splitemapp-android/res/layout/list_item_project.xml
+++ b/splitemapp-android/res/layout/list_item_project.xml
@@ -4,21 +4,16 @@
     android:layout_height="match_parent"
     android:orientation="horizontal" >
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.20"
-        android:contentDescription="@string/h_project_icon_description"
-        android:src="@drawable/list_item_project" />
-
     <TextView
         android:id="@+id/h_project_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_weight="0.80"
-        android:textColor="@color/white"
         android:padding="10dp"
-        android:textSize="22sp" />
+        android:drawablePadding="5dp"
+        android:textColor="@color/black"
+        android:textSize="22sp" 
+        android:drawableStart="@drawable/list_item_project"
+        android:drawableLeft="@drawable/list_item_project"/>
 
 </LinearLayout>
