--- a/splitemapp-android/res/layout/fragment_home.xml
+++ b/splitemapp-android/res/layout/fragment_home.xml
@@ -14,15 +14,18 @@
 
         <ImageView
             android:id="@+id/h_avatar_imageView"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:contentDescription="@string/h_avatar_description"
-            android:padding="20dp" 
+            android:paddingStart="20dp"
+            android:paddingLeft="20dp" 
+            android:paddingEnd="10dp"
+            android:paddingRight="10dp" 
             android:src="@drawable/avatar_placeholder"/>
 
         <LinearLayout
             style="@style/ActivityTheme"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
@@ -31,14 +34,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
-                android:textSize="20sp" />
+                android:textSize="28sp" />
 
             <TextView
                 android:id="@+id/h_email_textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
-                android:textSize="15sp" />
+                android:textSize="20sp" />
         </LinearLayout>
     </LinearLayout>
 
