--- a/splitemapp-android/res/values/colors.xml
+++ b/splitemapp-android/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <color name="background">#6C8296</color>
+    <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="green">#90DD1E</color>
     <color name="text">#ABBEDD</color>
