--- a/splitemapp-android/res/values/styles.xml
+++ b/splitemapp-android/res/values/styles.xml
@@ -16,14 +16,45 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
-    
+
     <style name="ActivityTheme" parent="Theme.AppCompat">
         <item name="android:background">@color/background</item>
         <item name="android:adjustViewBounds">true</item>
         <item name="android:singleLine">true</item>
         <item name="android:maxLines">1</item>
     </style>
+
+    <style name="ActivityGrayTheme" parent="Theme.AppCompat">
+        <item name="android:background">@color/grey</item>
+        <item name="android:adjustViewBounds">true</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:maxLines">1</item>
+    </style>
+
+    <style name="CreateListEditText" parent="Theme.AppCompat">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">35dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:background">@color/white</item>
+    </style>
     
+    <style name="CreateListSpinner" parent="Theme.AppCompat">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">35dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:background">@color/white</item>
+    </style>
+
+    <style name="CreateListTextView" parent="Theme.AppCompat">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:paddingTop">10dp</item>
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:paddingRight">0dp</item>
+        <item name="android:textSize">15sp</item>
+    </style>
+
     <style name="LoginEditText" parent="Theme.AppCompat">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">0dp</item>
@@ -34,7 +65,7 @@
         <item name="android:textSize">20sp</item>
         <item name="android:paddingLeft">50dp</item>
     </style>
-    
+
     <style name="LoginButton" parent="Theme.AppCompat">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">0dp</item>
