--- a/splitemapp-android/res/values/colors.xml
+++ b/splitemapp-android/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="white">#FFFFFF</color>
     <color name="green">#90DD1E</color>
     <color name="text">#ABBEDD</color>
-    <color name="textbox_background">#FFFFFF</color>
-    <color name="login_background">#379AEA</color>
+    <color name="blue">#379AEA</color>
+    <color name="transparent">#80FFFFFF</color>
 
 </resources>
