--- a/splitemapp-android/res/layout/fragment_create_account.xml
+++ b/splitemapp-android/res/layout/fragment_create_account.xml
@@ -75,8 +75,7 @@
 
     <Button
         android:id="@+id/create_account_create_account_button"
-        style="@style/LoginButton"
-        android:layout_weight="0.1"
+        style="@style/Button"
         android:text="@string/ca_create_account_button" />
 
     <LinearLayout
