--- a/splitemapp-android/res/layout/fragment_home.xml
+++ b/splitemapp-android/res/layout/fragment_home.xml
@@ -55,10 +55,8 @@
 
     <Button
         android:id="@+id/h_new_list_button"
-        style="@style/LoginButton"
+        style="@style/Button"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.10"
         android:text="@string/h_new_list_button" />
 
 </LinearLayout>
