--- a/splitemapp-android/res/layout/fragment_login.xml
+++ b/splitemapp-android/res/layout/fragment_login.xml
@@ -44,8 +44,7 @@
 
     <Button
         android:id="@+id/li_login_button"
-        style="@style/LoginButton"
-        android:layout_weight="0.1"
+        style="@style/Button"
         android:text="@string/li_log_in_button" />
 
     <LinearLayout
