--- a/splitemapp-android/res/values/styles.xml
+++ b/splitemapp-android/res/values/styles.xml
@@ -34,6 +34,7 @@
     <style name="CreateListEditText" parent="Theme.AppCompat">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">35dp</item>
+        <item name="android:paddingLeft">5dp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:background">@color/white</item>
     </style>
@@ -41,8 +42,8 @@
     <style name="CreateListSpinner" parent="Theme.AppCompat">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">35dp</item>
-        <item name="android:textColor">@color/black</item>
-        <item name="android:background">@color/white</item>
+        <item name="android:paddingLeft">5dp</item>
+        <item name="android:background">@drawable/spinner_background</item>
     </style>
 
     <style name="CreateListTextView" parent="Theme.AppCompat">
@@ -66,11 +67,11 @@
         <item name="android:paddingLeft">50dp</item>
     </style>
 
-    <style name="LoginButton" parent="Theme.AppCompat">
+    <style name="Button" parent="Theme.AppCompat">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">0dp</item>
+        <item name="android:layout_height">50dp</item>
         <item name="android:layout_gravity">center</item>
-        <item name="android:background">@color/login_background</item>
+        <item name="android:background">@color/blue</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">20sp</item>
     </style>
