--- a/splitemapp-android/res/layout/list_item_user_expense.xml
+++ b/splitemapp-android/res/layout/list_item_user_expense.xml
@@ -6,15 +6,18 @@
 
     <ImageView
         android:id="@+id/ue_icon_imageView"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:padding="5dp"
         android:layout_gravity="center"
         android:contentDescription="@string/ue_icon_description"
-        android:src="@drawable/list_item_project" />
+        android:src="@drawable/category_placeholder" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_weight="1"
         android:orientation="vertical" >
 
         <TextView
@@ -39,7 +42,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end"
+        android:layout_gravity="center|end"
         android:text="@string/ue_currency"
         android:textColor="@color/black"
         android:textSize="22sp" />
@@ -48,9 +51,10 @@
         android:id="@+id/ue_amount_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end"
+        android:layout_gravity="center|end"
         android:text="@string/ue_amount_placeholder"
         android:textColor="@color/black"
-        android:textSize="22sp" />
+        android:textSize="22sp" 
+        android:padding="5dp"/>
 
 </LinearLayout>
