--- a/splitemapp-android/res/layout/action_menu_expense.xml
+++ b/splitemapp-android/res/layout/action_menu_expense.xml
@@ -5,20 +5,30 @@
     android:orientation="horizontal" >
 
     <TextView
-        android:id="@+id/cl_cancel_action"
+        android:id="@+id/ae_cancel_action"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:text="@string/cl_cancel_action"
+        android:layout_gravity="bottom|start"
+        android:text="@string/e_cancel_action"
         android:textColor="@color/white"
         android:textSize="18sp" />
 
     <TextView
-        android:layout_width="210dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="@string/cl_title"
+        android:text="@string/e_title"
         android:textColor="@color/white"
         android:textSize="22sp" />
+
+    <TextView
+        android:id="@+id/ae_save_action"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:gravity="end"
+        android:text="@string/e_save_action"
+        android:textColor="@color/white"
+        android:textSize="18sp" />
 
 </LinearLayout>
