--- a/splitemapp-android/res/layout/fragment_expense.xml
+++ b/splitemapp-android/res/layout/fragment_expense.xml
@@ -26,24 +26,7 @@
         android:textColor="@color/black"
         android:textSize="23sp" />
 
-    <LinearLayout
-        style="@style/ActivityTheme"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0.5dp"
-            android:layout_weight="0.05"
-            android:background="@color/white" />
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0.5dp"
-            android:layout_weight="0.95"
-            android:background="@color/text" />
-    </LinearLayout>
+    <include layout="@layout/line_separator" />
 
     <LinearLayout
         android:layout_width="match_parent"
