--- a/splitemapp-android/res/layout/fragment_login.xml
+++ b/splitemapp-android/res/layout/fragment_login.xml
@@ -2,7 +2,7 @@
     style="@style/ActivityTheme"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical" >
 
     <TextView
         android:layout_width="match_parent"
@@ -16,24 +16,7 @@
         android:hint="@string/li_username_hint"
         android:inputType="textEmailAddress" />
 
-    <LinearLayout
-        style="@style/ActivityTheme"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0.5dp"
-            android:layout_weight="0.05"
-            android:background="@color/white" />
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0.5dp"
-            android:layout_weight="0.95"
-            android:background="@color/text" />
-    </LinearLayout>
+    <include layout="@layout/line_separator" />
 
     <EditText
         android:id="@+id/li_password_editText"
@@ -67,8 +50,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
-            android:text="@string/li_sign_up_link"
             android:padding="10dp"
+            android:text="@string/li_sign_up_link"
             android:textColor="@color/green" />
     </LinearLayout>
 
