Adding new activity to add people to the project when creating it. We still need to add the logic that actually adds the people selected in this screen to the project screen.

--- a/splitemapp-android/res/layout/fragment_create_list.xml
+++ b/splitemapp-android/res/layout/fragment_create_list.xml
@@ -47,6 +47,7 @@
     <include layout="@layout/line_separator" />
 
     <TextView
+        android:id="@+id/cl_add_people_textView"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/white"
