--- a/splitemapp-android/res/menu/menu_home.xml
+++ b/splitemapp-android/res/menu/menu_home.xml
@@ -2,6 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/h_logout"
           android:title="@string/h_logout"/>
+    <item android:id="@+id/h_manage_contacts"
+          android:title="@string/h_manage_contacts"/>
     <item android:id="@+id/h_synchronize"
           android:title="@string/h_synchronize"/>
 </menu>
