--- a/splitemapp-android/res/layout/list_item_project.xml
+++ b/splitemapp-android/res/layout/list_item_project.xml
@@ -1,19 +1,31 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     style="@style/Theme.AppCompat"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal" >
 
-    <TextView
-        android:id="@+id/h_project_title"
-        android:layout_width="wrap_content"
+    <!-- A CardView that contains a TextView -->
+
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:padding="10dp"
-        android:drawablePadding="5dp"
-        android:textColor="@color/black"
-        android:textSize="22sp" 
-        android:drawableStart="@drawable/list_item_project"
-        android:drawableLeft="@drawable/list_item_project"/>
+        android:layout_gravity="start" >
+
+        <TextView
+            android:id="@+id/h_project_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:drawableLeft="@drawable/list_item_project"
+            android:drawablePadding="5dp"
+            android:drawableStart="@drawable/list_item_project"
+            android:padding="10dp"
+            android:textColor="@color/black"
+            android:textSize="22sp" />
+        
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
