--- a/splitemapp-android/res/layout/fragment_home.xml
+++ b/splitemapp-android/res/layout/fragment_home.xml
@@ -17,11 +17,11 @@
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:contentDescription="@string/h_avatar_description"
-            android:paddingStart="20dp"
-            android:paddingLeft="20dp" 
             android:paddingEnd="10dp"
-            android:paddingRight="10dp" 
-            android:src="@drawable/avatar_placeholder"/>
+            android:paddingLeft="20dp"
+            android:paddingRight="10dp"
+            android:paddingStart="20dp"
+            android:src="@drawable/avatar_placeholder" />
 
         <LinearLayout
             style="@style/ActivityTheme"
@@ -45,13 +45,12 @@
         </LinearLayout>
     </LinearLayout>
 
-    <ListView
-        android:id="@+id/h_projects_listView"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/h_projects_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.60"
-        android:background="@color/white" >
-    </ListView>
+        android:background="@color/white" />
 
     <Button
         android:id="@+id/h_new_list_button"
