--- a/splitemapp-android/res/values/colors.xml
+++ b/splitemapp-android/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="green">#90DD1E</color>
     <color name="text">#ABBEDD</color>
     <color name="blue">#379AEA</color>
+    <color name="seablue">#20BAE4</color>
     <color name="transparent">#80FFFFFF</color>
 
 </resources>
