--- a/splitemapp-android/res/values/styles.xml
+++ b/splitemapp-android/res/values/styles.xml
@@ -17,6 +17,11 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
+    <style name="NoActionBarTheme" parent="Theme.AppCompat">
+        <item name="windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
+    </style>
+
     <style name="ActivityTheme" parent="Theme.AppCompat">
         <item name="android:background">@color/background</item>
         <item name="android:adjustViewBounds">true</item>
@@ -36,9 +41,9 @@
         <item name="android:layout_height">35dp</item>
         <item name="android:paddingLeft">5dp</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:background">@color/white</item>
+        <item name="android:background">@drawable/edittext_background</item>
     </style>
-    
+
     <style name="CreateListSpinner" parent="Theme.AppCompat">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">35dp</item>
@@ -47,9 +52,10 @@
     </style>
 
     <style name="CreateListTextView" parent="Theme.AppCompat">
-        <item name="android:layout_width">wrap_content</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/seablue</item>
         <item name="android:paddingTop">10dp</item>
         <item name="android:paddingLeft">10dp</item>
         <item name="android:paddingRight">0dp</item>
