--- a/splitemapp-android/res/layout/list_item_user.xml
+++ b/splitemapp-android/res/layout/list_item_user.xml
@@ -1,19 +1,51 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/Theme.AppCompat"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/white"
     android:orientation="horizontal" >
 
+    <ImageView
+        android:id="@+id/cl_user_avatar"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:contentDescription="@string/cl_user_avatar_description"
+        android:paddingEnd="5dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:paddingStart="5dp"
+        android:src="@drawable/avatar_placeholder" />
+
     <TextView
-        android:id="@+id/cl_user_first_name"
+        android:id="@+id/cl_user_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:padding="10dp"
+        android:layout_toEndOf="@id/cl_user_avatar"
+        android:layout_toRightOf="@id/cl_user_avatar"
+        android:text="User Name"
         android:textColor="@color/black"
-        android:textSize="22sp" 
-        android:drawablePadding="5dp"
-        android:drawableStart="@drawable/list_item_project"
-        android:drawableLeft="@drawable/list_item_project"/>
+        android:textSize="22sp" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/cl_user_email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/cl_user_name"
+        android:layout_toEndOf="@id/cl_user_avatar"
+        android:layout_toRightOf="@id/cl_user_avatar"
+        android:text="sample@splitemapp.com"
+        android:textColor="@color/grey"
+        android:textSize="18sp" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_below="@id/cl_user_email"
+        android:layout_toEndOf="@id/cl_user_avatar"
+        android:layout_toRightOf="@id/cl_user_avatar"
+        android:background="@color/grey" />
+
+</RelativeLayout>
