--- a/splitemapp-android/res/layout/list_item_user.xml
+++ b/splitemapp-android/res/layout/list_item_user.xml
@@ -23,26 +23,42 @@
         android:id="@+id/cl_user_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingStart="5dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="0dp"
+        android:paddingEnd="0dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:layout_toEndOf="@id/cl_user_avatar"
         android:layout_toRightOf="@id/cl_user_avatar"
+        android:gravity="center_vertical"
         android:text="User Name"
         android:textColor="@color/black"
-        android:textSize="22sp" />
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/cl_user_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingStart="5dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="0dp"
+        android:paddingEnd="0dp"
+        android:paddingBottom="5dp"
         android:layout_below="@id/cl_user_name"
         android:layout_toEndOf="@id/cl_user_avatar"
         android:layout_toRightOf="@id/cl_user_avatar"
         android:text="sample@splitemapp.com"
         android:textColor="@color/grey"
-        android:textSize="18sp" />
+        android:textSize="12sp" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
+        android:paddingStart="5dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="0dp"
+        android:paddingEnd="0dp"
         android:layout_below="@id/cl_user_email"
         android:layout_toEndOf="@id/cl_user_avatar"
         android:layout_toRightOf="@id/cl_user_avatar"
