--- a/splitemapp-android/res/values/styles.xml
+++ b/splitemapp-android/res/values/styles.xml
@@ -57,6 +57,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/seablue</item>
         <item name="android:paddingTop">10dp</item>
+        <item name="android:paddingBottom">10dp</item>
         <item name="android:paddingLeft">10dp</item>
         <item name="android:paddingRight">0dp</item>
         <item name="android:textSize">15sp</item>
