--- a/splitemapp-android/res/layout/fragment_login.xml
+++ b/splitemapp-android/res/layout/fragment_login.xml
@@ -1,29 +1,34 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="fill_parent" 
+    android:background="@color/seablue">
 
     <LinearLayout
-        style="@style/ActivityTheme"
+        style="@style/NoActionBarTheme"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
-        <TextView
+        <View 
             android:layout_width="match_parent"
-            android:layout_height="210dp"/>
+            android:layout_height="200dp"/>
+        
+        <TextView
+            style="@style/LoginTextView"
+            android:text="@string/li_username_hint" />
 
         <EditText
             android:id="@+id/li_username_editText"
             style="@style/LoginEditText"
-            android:hint="@string/li_username_hint"
             android:inputType="textEmailAddress" />
 
-        <include layout="@layout/line_separator" />
-
+        <TextView
+            style="@style/LoginTextView"
+            android:text="@string/li_password_hint" />
+        
         <EditText
             android:id="@+id/li_password_editText"
             style="@style/LoginEditText"
-            android:hint="@string/li_password_hint"
             android:inputType="textPassword" />
 
         <Button
