--- a/splitemapp-android/res/values/styles.xml
+++ b/splitemapp-android/res/values/styles.xml
@@ -2,13 +2,13 @@
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
+        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
     <style name="AppBaseTheme" parent="Theme.AppCompat">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
+            backward-compatibility can go here.
         -->
     </style>
 
@@ -23,7 +23,7 @@
     </style>
 
     <style name="ActivityTheme" parent="Theme.AppCompat">
-        <item name="android:background">@color/background</item>
+        <item name="android:background">@color/white</item>
         <item name="android:adjustViewBounds">true</item>
         <item name="android:singleLine">true</item>
         <item name="android:maxLines">1</item>
@@ -44,13 +44,6 @@
         <item name="android:background">@drawable/edittext_background</item>
     </style>
 
-    <style name="CreateListSpinner" parent="Theme.AppCompat">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">35dp</item>
-        <item name="android:paddingLeft">5dp</item>
-        <item name="android:background">@drawable/spinner_background</item>
-    </style>
-
     <style name="CreateListTextView" parent="Theme.AppCompat">
         <item name="android:background">@color/white</item>
         <item name="android:layout_width">match_parent</item>
@@ -65,13 +58,29 @@
 
     <style name="LoginEditText" parent="Theme.AppCompat">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">50dp</item>
-        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_height">35dp</item>
+        <item name="android:paddingLeft">5dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:background">@drawable/edittext_background</item>
+    </style>
+
+    <style name="LoginTextView" parent="Theme.AppCompat">
         <item name="android:background">@color/white</item>
-        <item name="android:textColor">@color/text</item>
-        <item name="android:textColorHint">@color/text</item>
-        <item name="android:textSize">20sp</item>
-        <item name="android:paddingLeft">50dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/seablue</item>
+        <item name="android:paddingTop">10dp</item>
+        <item name="android:paddingBottom">10dp</item>
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:paddingRight">0dp</item>
+        <item name="android:textSize">15sp</item>
+    </style>
+
+    <style name="CreateListSpinner" parent="Theme.AppCompat">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">35dp</item>
+        <item name="android:paddingLeft">5dp</item>
+        <item name="android:background">@drawable/spinner_background</item>
     </style>
 
     <style name="Button" parent="Theme.AppCompat">
